--- a/OPPDemo/OPPDemo/OPPDemo.csproj
+++ b/OPPDemo/OPPDemo/OPPDemo.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>OPPDemo.InterfaceDemo</StartupObject>
+    <StartupObject>OPPDemo.PartialDemo</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,8 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractDemo.cs" />
+    <Compile Include="Animal.cs" />
+    <Compile Include="ConstructorDemo.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="Employees.cs" />
+    <Compile Include="FourWheeler.cs" />
+    <Compile Include="Gst.cs" />
+    <Compile Include="GstStat.cs" />
     <Compile Include="HybridInheritance.cs" />
+    <Compile Include="IndexerDemo.cs" />
     <Compile Include="InterfaceDemo.cs" />
     <Compile Include="IWifi.cs" />
     <Compile Include="MobilePhone.cs" />
@@ -57,9 +65,17 @@
     <Compile Include="NOKIA1400.cs" />
     <Compile Include="NOKIA2700.cs" />
     <Compile Include="NOKIALUMIA.cs" />
+    <Compile Include="PartialDemo.cs" />
     <Compile Include="PolyDemo.cs" />
+    <Compile Include="PropDemo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SealedDemo.cs" />
     <Compile Include="SingleInheritance.cs" />
+    <Compile Include="StaticDemo.cs" />
+    <Compile Include="StrIndexer.cs" />
+    <Compile Include="Student.cs" />
+    <Compile Include="UserDefinedTypeIndexer.cs" />
+    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
